For more information, check the README.md in <http://github.com/i3visio/osrframework>. For the ToDo list and the known issues, scroll down till the end of this file.


0.9.0rc1, 2015/08/13 -- First DEB, RPM, compiled version of 0.9.0.
- Updating setup.py to include some data files in /usr/bin/.
- Creation of .deb, .rpm packages.

0.9.0b7, 2015/08/12 -- Fixes in the Maltego transforms.
- Added Maltego transform: searchfy on Twitter.
- Added Maltego transform: searchfy on Facebook.
- Added Maltego transform: searchfy on Skype.
- Modified Maltego transform: aliasToKnownMails is now operative.
- The i3visio.location.city entity is extracted correctly when calling ip-api.com API.
- If the number of entities returned are too many a message will be displayed in the Transform output tab.
- Debug windows are not shown in production thanks to a new utility included in configure_maltego.py.
- Fix in Skype wrapper to avoid showing errors messages that make Maltego crash. 
- Remove PIP dependencies: only pip will be required. The other dependencies will be checked when installed and included to be manually installed by the user.
- Update on the version number from v0.9.0 to 0.9.0 format (without the 'v').

v0.9.0b6, 2015/07/15 -- Minor fix in hi5 that needs credentials right now.
- Hi5 wrapper has been modified to request credentials.

v0.9.0b5, 2015/07/15 -- Added searchfy platforms for skype, facebook and twitter.
- Added the searchfy functionality.
- Fixed the returned objects in usufy (now, it's always a list).
- Facesaerch and ahmia have been temporally deactivated.
- The generated output now does not override the file if it already exists. Instead, it reads the previous data and appends the new information.

v0.9.0b4, 2015/07/13 -- Fixed the output when too much information is displayed.