@@ -4,3 +4,5 @@ include README.md
 include COPYING
 include *sample
 include osrframework/transforms/lib/*mtz
+include doc/*
+include res/*
