@@ -1,0 +1,9 @@
+[Desktop Entry]
+Name=Alias Generator
+GenericName=OSINT tools
+Exec=pantheon-terminal -e "alias_generator.py -h";
+Icon=/usr/share/osrframework/logo.png
+Categories=i3visio;
+Terminal=False
+Type=Application
+Version=1.0
