@@ -1,0 +1,9 @@
+[Desktop Entry]
+Name=Searchfy
+GenericName=OSINT tools
+Exec=pantheon-terminal -e "searchfy.py -h"
+Icon=/usr/share/osrframework/logo.png
+Categories=i3visio;
+Terminal=true
+Type=Application
+Version=1.0
