@@ -1,0 +1,10 @@
+[Desktop Entry]
+Name=usufy.py
+GenericName=OSINT tool
+Exec=usufy.py -h
+Terminal=True
+Type=Application
+StartupNotify=false
+Categories=i3visio;Analysis;
+
+
