@@ -1,0 +1,9 @@
+[Desktop Entry]
+Name=Usufy
+Comment=usufy is a GPLv3+ piece of software that checks the existence of a profile for a given user in a bunch of different platforms. It uses the error messages displayed by most platforms when a user profile has not been found as the evidence of the existence or not of a given profile. 
+GenericName=OSINT tools
+Exec=pantheon-terminal -e "usufy.py -h"
+Icon=/usr/share/osrframework/logo.png
+Categories=i3visio;
+Type=Application
+Terminal=true
